configured for electron

--- a/package.json
+++ b/package.json
@@ -1,26 +1,65 @@
 {
-  "name": "cosgun-hussein-portfolio",
+  "name": "Pristine",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "main": "electron/main.js",
+  "author": "Cosgun Hussein",
+  "description": "Pristine",
+  "homepage": "/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:serve": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"npm run electron:start\"",
+    "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
+    "electron:start": "wait-on tcp:5173 && electron ."
+  },
+  "build": {
+    "appId": "Pristine",
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "public/installer.ico"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/main.js",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "nsis": {
+      "uninstallDisplayName": "Pristine",
+      "license": "license.txt",
+      "oneClick": "false",
+      "allowToChangeInstallationDirectory": "true",
+      "installerIcon": "public/installer.ico",
+      "uninstallerIcon": "public/installer.ico"
+    },
+    "directories": {
+      "output": "releases",
+      "buildResources": "dist"
+    }
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-to-pdf": "^1.0.1",
-    "react-to-print": "^2.14.15"
+    "react-to-print": "^2.14.15",
+    "wait-on": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "electron": "^27.0.2",
+    "electron-builder": "^24.6.4",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
