--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start-electron": "nodemon --watch ./public/* --exec \"electron .\"",
     "dev": "concurrently \"npm run start-dev\" \"wait-on tcp:5173 && npm run start-electron\" ",
     "postinstall": "electron-builder install-app-deps",
-    "pack-app": "npm run start-build && electron-builder --dir",
+    "pack-app": "set GH_TOKEN=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 && npm run start-build && electron-builder --dir --win --publish always",
     "pack-build": "electron-builder --dir",
     "build": "npm run start-build && electron-builder",
     "clear": "concurrently \"node db/users.js\" \"node db/tickets.js\" \"node db/performance.js\""
@@ -50,6 +50,9 @@
     "win": {
       "target": [
         "nsis"
+      ],
+      "publish": [
+        "github"
       ]
     },
     "nsis": {
