--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start-electron": "nodemon --watch ./public/* --exec \"electron .\"",
     "dev": "concurrently \"npm run start-dev\" \"wait-on tcp:5173 && npm run start-electron\" ",
     "postinstall": "electron-builder install-app-deps",
-    "pack-app": "set GH_TOKEN=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 && npm run start-build && electron-builder --win -p always",
+    "pack-app": "npm run start-build && electron-builder --win -p always",
     "pack-build": "electron-builder --dir",
     "build": "npm run start-build && electron-builder",
     "clear": "concurrently \"node db/users.js\" \"node db/tickets.js\" \"node db/performance.js\""
