refactoring, dnd services, modals

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Prestine",
   "private": false,
-  "version": "1.14.1",
+  "version": "1.15.0",
   "author": "Cosgun Hussein",
   "description": "Prestine POS",
   "main": "public/electron.js",
@@ -80,7 +80,10 @@
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-gesture-responder": "^2.1.0",
+    "react-grid-dnd": "^2.1.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-to-print": "^2.14.15",
